force-app/main/default/objects/MIBOS_Case_Time__c/MIBOS_Case_Time__c.object-meta.xml
<CustomObject>
    <description>Case Time object from Roadnet</description>
    <label>Case Time</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Case Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>