force-app/main/default/objects/MIBOS_Case_Time__c/fields/Case_Event__c.field-meta.xml
<CustomField>
    <fullName>Case_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Event</label>
    <referenceTo>Case_Event__c</referenceTo>
    <relationshipLabel>Case Times</relationshipLabel>
    <relationshipName>Case_Times</relationshipName>
    <type>Lookup</type>
</CustomField>