force-app/main/default/objects/MIBOS_Case_Time__c/fields/Is_Assistant_Tech__c.field-meta.xml
<CustomField>
    <fullName>Is_Assistant_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assistant Tech</label>
    <type>Checkbox</type>
</CustomField>