force-app/main/default/objects/MIBOS_Case_Time__c/fields/Last_Synched__c.field-meta.xml
<CustomField>
    <fullName>Last_Synched__c</fullName>
    <label>Last Synched with FinancialForce</label>
    <type>DateTime</type>
</CustomField>