force-app/main/default/objects/MIBOS_Case_Time__c/fields/Start_Time_Form__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Form__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time Form</label>
    <type>Date</type>
</CustomField>