force-app/main/default/objects/MIBOS_Case_Time__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync with FinancialForce?</label>
    <type>Checkbox</type>
</CustomField>