force-app/main/default/objects/MIBOS_Case_Time__c/fields/Synched_Time__c.field-meta.xml
<CustomField>
    <fullName>Synched_Time__c</fullName>
    <label>Synched Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>