force-app/main/default/objects/MIBOS_Case_Time__c/fields/Timecard__c.field-meta.xml
<CustomField>
    <fullName>Timecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timecard</label>
    <referenceTo>pse__Timecard_Header__c</referenceTo>
    <relationshipLabel>Case Times</relationshipLabel>
    <relationshipName>Case_Times</relationshipName>
    <type>Lookup</type>
</CustomField>