force-app/main/default/objects/MIBOS_Case_Time__c/fields/Work_Effort__c.field-meta.xml
<CustomField>
    <fullName>Work_Effort__c</fullName>
    <label>Work Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>